--- a/style/base.css
+++ b/style/base.css
@@ -153,6 +153,19 @@
     margin-bottom: 2em;
 }
 
+.fundoPretoAbsolute {
+    display: flex;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100vh;
+
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 /*gerenciamentoSist.php*/
 
 .registrosSist {
